--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,21 @@
     <!-- Mathjax -->
     <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
     <!-- Mermaid script -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            mermaid.initialize({ startOnLoad: true });
-        });
-    </script>
+    {%- if content contains 'mermaid' -%}
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
+        <script>
+        const config = {
+          startOnLoad:true,
+          theme: 'forest',
+          flowchart: {
+              useMaxWidth:false,
+              htmlLabels:true
+              }
+        };
+        mermaid.initialize(config);
+        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+      </script>
+    {% endif %}
   </head>
   <body a="{{ site.theme_config.appearance | default: "auto" }}">
     <main class="content" aria-label="Content">
